--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "mongodb": "^5.4.0",
